# worktree-manager

./: .gitignore  CLAUDE.md  PLAN.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.claude/commands/: release.md
.githooks/: pre-commit  pre-push
.github/workflows/: deploy-docs.yml  deploy-pages.yml  release.yml
docs/: API.md  ARCHITECTURE.md  DEVELOPMENT.md  FEATURES.md  NEW_FEATURES.md  PROJECT_OVERVIEW.md  design-system.html  guide.html  index.html
docs/en/: guide.html  index.html
src/: App.tsx  constants.ts  i18n.d.ts  i18n.ts  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  git_ops.rs  http_server.rs  lib.rs  main.rs  pty_manager.rs  state.rs  tls.rs  tmux_manager.rs  types.rs  utils.rs  wms_tunnel.rs
src-tauri/src/commands/: git.rs  mod.rs  pty.rs  sharing.rs  system.rs  voice.rs  window.rs  workspace.rs  worktree.rs
src/components/: AddProjectModal.tsx  AddProjectToWorktreeModal.tsx  AddWorkspaceModal.tsx  ArchiveConfirmationModal.tsx  BranchCombobox.tsx  ContextMenus.tsx  CreatePRModal.tsx  CreateWorktreeModal.tsx  GitOperations.tsx  GlobalDialogs.tsx  Icons.tsx  SettingsView.tsx  Terminal.tsx  TerminalPanel.tsx  Toast.tsx  UpdaterDialogs.tsx  WelcomeView.tsx  WorktreeDetail.tsx  WorktreeSidebar.tsx  index.ts
src/components/ui/: badge.tsx  button.tsx  card.tsx  checkbox.tsx  dialog.tsx  dropdown-menu.tsx  index.ts  input.tsx  popover.tsx  select.tsx  tooltip.tsx
src/hooks/: index.ts  useBrowserAuth.ts  useMainOccupation.ts  useModals.ts  useShareFeature.ts  useTerminal.ts  useUpdater.ts  useVoiceInput.ts  useWorkspace.ts  useWorkspaceActions.ts  useWorktreeLocks.ts
src/lib/: backend.ts  websocket.ts
src/locales/: en-US.json  zh-CN.json
src/utils/: updater.ts
