[package]
name = "worktree-manager"
version = "0.1.2"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "worktree_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
git2 = "0.20"
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.19"
portable-pty = "0.9.0"
wait-timeout = "0.2"
openssl-sys = { version = "0.9", features = ["vendored"] }
log = "0.4"
tauri-plugin-log = "2"
urlencoding = "2"
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
tower-http = { version = "0.6", features = ["cors", "fs", "limit"] }
local-ip-address = "0.6"
ngrok = "0.18"
url = "2"
rustls = { version = "0.23", features = ["aws-lc-rs"] }
uuid = { version = "1", features = ["v4"] }

